	default keybindings.

	* info/session.c (incremental_search): Use get_input_key to distinguish
	between Escape being pressed and arrow keys.  Don't push unused key
	presses back into input buffer.

	* info/terminal.c (term_kx): Remove unused variable (same as
	term_kD).
	* info/pcterm.c (pc_initialize_terminal): Use term_kD instead of
	term_kx.

2014-06-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.h:
	(SK_RIGHT_ARROW, SK_LEFT_ARROW, SK_UP_ARROW, SK_DOWN_ARROW, SK_PAGE_UP)
	(SK_PAGE_DOWN SK_HOME, SK_END, SK_DELETE, SK_INSERT, SK_CTL_LEFT_ARROW)
	(SK_CTL_RIGHT_ARROW, SK_CTL_DELETE, SK_BACK_TAB): Removed.
	(struct sect): Removed.

	* info/infomap.h (BYTEMAP_ENTRY): New typedef.
	(BYTEMAP_NONE, BYTEMAP_KEY, BYTEMAP_MAP, BYTEMAP_ESC): New symbols.
	* info/terminal.c (byte_seq_to_key): New variable.
	(initialize_byte_map): New function.
	(terminal_initialize_terminal): Call it.

	* info/infomap.h
	(KEY_RIGHT_ARROW, KEY_LEFT_ARROW, KEY_UP_ARROW, KEY_DOWN_ARROW)
	(KEY_PAGE_UP, KEY_PAGE_DOWN, KEY_HOME, KEY_END, KEY_DELETE, KEY_INSERT)
	(KEY_CTL_LEFT_ARROW, KEY_CTL_RIGHT_ARROW, KEY_CTL_DELETE)
	(KEY_BACK_TAB): New symbols.
	(KEYMAP_SIZE, KEYMAP_META_BASE, KEYMAP_META): New symbols.

	* info/infomap.c (keymap_make_keymap, keymap_discard_keymap): Make
	keymap as big as KEYMAP_SIZE.
	(default_emacs_like_info_keys, default_emacs_like_ea_keys)
	(default_vi_like_info_keys, default_vi_like_ea_keys):
	Arrays of int instead of arrays of char.  Use KEY_* symbols instead of
	SK_* sequences.  Use KEYMAP_META macro instead of Meta.  Avoid some
	duplication where both a sequence with ESC Key and Meta-Key were
	bound.  Don't specify sequences produced by special keys.
	(section_to_keymaps): Process new format specifying key bindings.
	(decode_keys): Removed.
	(find_function_keyseq, add_function_keyseq, remove_function_keyseq):
	Keys are represented with type int instead of char.
	(keymap_copy_keymap): Removed.